feat(api): expose email signatures
